--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,43 @@
+/** Preloader */
+#preloader {
+	position: fixed;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	z-index: 10000;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 20px;
+  background: #1f2937;
+  color: #ffffff;
+	transition: .3s all ease;
+}
+
+#preloader.loaded {
+	opacity: 0;
+	visibility: hidden;
+}
+
+.rotating-wheel {
+	width: 32px;
+	height: 32px;
+	margin: 0 auto;
+	border: 3px solid #ec4899;
+	border-radius: 50%;
+	border-left-color: transparent;
+	border-bottom-color: transparent;
+	animation: rotating-spin .88s infinite linear;
+}
+
+@keyframes rotating-spin {
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
+/** Resizer */
 .Resizer {
   background: #374251;
   z-index: 1;
