--- a/apps/studio/src/main.css
+++ b/apps/studio/src/main.css
@@ -1,40 +1,40 @@
 /** Preloader */
 #preloader {
-	position: fixed;
-	left: 0;
-	top: 0;
-	bottom: 0;
-	right: 0;
-	z-index: 10000;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	padding: 20px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 10000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
   background: #1f2937;
   color: #ffffff;
-	transition: .3s all ease;
+  transition: 0.3s all ease;
 }
 
 #preloader.loaded {
-	opacity: 0;
-	visibility: hidden;
+  opacity: 0;
+  visibility: hidden;
 }
 
 .rotating-wheel {
-	width: 32px;
-	height: 32px;
-	margin: 0 auto;
-	border: 3px solid #ec4899;
-	border-radius: 50%;
-	border-left-color: transparent;
-	border-bottom-color: transparent;
-	animation: rotating-spin .88s infinite linear;
+  width: 32px;
+  height: 32px;
+  margin: 0 auto;
+  border: 3px solid #ec4899;
+  border-radius: 50%;
+  border-left-color: transparent;
+  border-bottom-color: transparent;
+  animation: rotating-spin 0.88s infinite linear;
 }
 
 @keyframes rotating-spin {
-	100% {
-		transform: rotate(360deg);
-	}
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 /** Resizer */
@@ -134,7 +134,7 @@
 }
 
 .driver-popover.driverjs-theme button {
-  background-color: #db2777 ;
+  background-color: #db2777;
   color: #ffffff !important;
   border: none !important;
   font-size: 14px;
@@ -144,6 +144,12 @@
   text-shadow: none;
   font-weight: bold;
   text-align: center;
+  transition: background-color 0.3s ease;
+}
+
+.driver-popover.driverjs-theme button:hover {
+  background-color: #c81c67;
+  cursor: pointer;
 }
 
 .driver-popover.driverjs-theme .driver-popover-close-btn {
@@ -160,18 +166,22 @@
   cursor: pointer;
 }
 
-.driver-popover.driverjs-theme .driver-popover-arrow-side-left.driver-popover-arrow {
+.driver-popover.driverjs-theme
+  .driver-popover-arrow-side-left.driver-popover-arrow {
   border-left-color: #1a1a1a;
 }
 
-.driver-popover.driverjs-theme .driver-popover-arrow-side-right.driver-popover-arrow {
+.driver-popover.driverjs-theme
+  .driver-popover-arrow-side-right.driver-popover-arrow {
   border-right-color: #1a1a1a;
 }
 
-.driver-popover.driverjs-theme .driver-popover-arrow-side-top.driver-popover-arrow {
+.driver-popover.driverjs-theme
+  .driver-popover-arrow-side-top.driver-popover-arrow {
   border-top-color: #1a1a1a;
 }
 
-.driver-popover.driverjs-theme .driver-popover-arrow-side-bottom.driver-popover-arrow {
+.driver-popover.driverjs-theme
+  .driver-popover-arrow-side-bottom.driver-popover-arrow {
   border-bottom-color: #1a1a1a;
 }
