--- a/apps/studio-next/src/app/globals.css
+++ b/apps/studio-next/src/app/globals.css
@@ -151,7 +151,7 @@
   transition: background-color 0.3s ease;
 }
 
-.driver-popover.driverjs-theme button:hover {
+.driver-popover.driverjs-theme button:not(.driver-popover-close-btn):hover {
   background-color: #c81c67;
   cursor: pointer;
 }
@@ -163,10 +163,6 @@
   top: 13px;
   right: 5px;
   padding: 0%;
-}
-
-.driver-popover.driverjs-theme .driver-popover-close-btn:hover {
-  background-color: transparent;
   cursor: pointer;
 }
 
